tests/baselines/reference/arrayIncludes.errors.txt
arrayIncludes.ts(10,12): error TS2339: Property 'length' does not exist on type 'never'.
arrayIncludes.ts(21,12): error TS2339: Property 'length' does not exist on type 'never'.


==== arrayIncludes.ts (2 errors) ====
    const array1 = ['foo', 'bar'] as const;
    
    const value1: string = 'baz';
    if (array1.includes(value1)) {
        value1.length;
    }
    
    const value2 = 'baz';
    if (array1.includes(value2)) {
        value2.length;
               ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'never'.
    }
    
    const value3 = 'bar';
    if (array1.includes(value3)) {
        value3.length;
    }
    
    const value4 = 'baz';
    const result0 = array1.includes(value4);
    if (result0) {
        value4.length;
               ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'never'.
    }
    